--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -4,7 +4,7 @@
     <h1 class="fw-bold">
         Welcome TO <span class="fst-italic text-info">SNAPHUB</span>
     </h1>
-    <h3>Have a Nice Day</h3>
+    <h3>A Way To Explore Connection with The World</h3>
 </div>
 
 <div class="container my-5">
