--- a/appUsers/templates/login.html
+++ b/appUsers/templates/login.html
@@ -14,4 +14,8 @@
         {{ form|crispy }}
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
+<div class="footer-section w-100 mt-3">
+    {% include "footer.html" %}
+</div>
 {%endblock%}
