--- a/appUsers/templates/regestration_form.html
+++ b/appUsers/templates/regestration_form.html
@@ -14,5 +14,9 @@
         {{ form|crispy }}
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
+<div class="footer-section w-100 mt-5">
+    {% include "footer.html" %}
+</div>
 {%endblock%}
 
