--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -30,5 +30,9 @@
         <p>No posts found.</p>
     {% endfor %}
 </div>
+
+<div class="footer-section w-100">
+    {% include "footer.html" %}
+</div>
 {% endblock  %}
 
