--- a/posts/templates/edit_post.html
+++ b/posts/templates/edit_post.html
@@ -2,12 +2,12 @@
 {%load crispy_forms_tags%}
 {%block content%}
 <form method="post" style="width:50%; margin: auto;" enctype="multipart/form-data">
-    <h1>Add Post here</h1>
+    <h1>Edit Post here</h1>
     {% csrf_token %}
     {{form|crispy}}
     <button class="btn btn-warning">Submit</button>
 </form>
-<div class="footer-section w-100 mt-3">
+<div class="footer-section w-100">
     {% include "footer.html" %}
 </div>
 {%endblock%}
