--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show w-50 mx-auto mt-3" role="alert">
+      {{ message }}
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  {% endfor %}
+{% endif %}
 <div class="text-center my-5">
     <h1 class="fw-bold">
         Welcome TO <span class="fst-italic text-info">SNAPHUB</span>
@@ -20,7 +28,7 @@
                     <img src="{{ post.image.url }}" alt="Post Image" class="img-fluid rounded mb-3" style="height: 300px; width: 100%; object-fit: contain;" />
                 {% endif %}
 
-                <a href="#" class="btn btn-primary">Like</a>
+                {% comment %} <a href="#" class="btn btn-primary">Like</a> {% endcomment %}
             </div>
             <div class="card-footer text-body-secondary">
                 {{ post.date_time|date:"F j, Y, g:i a" }}
