--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><span class="fst-italic text-info fw-bold"> SNAPHUB </span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,11 +27,11 @@
       </ul>
       <form class="d-flex" role="search">
         {%if user.is_authenticated%}
-           <a href={%url 'profile'%} class="btn btn-outline-success mx-3" type="submit">Profile</a>
-           <a href={%url 'user_logout'%} class="btn btn-outline-danger" type="submit">Log Out</a>
+           <a href={%url 'profile'%} class="btn btn-outline-success mx-3 fw-bold fs-4" type="submit">Profile</a>
+           <a href={%url 'user_logout'%} class="btn btn-outline-danger fw-bold fs-4" type="submit">Log Out</a>
         {%else%}
-            <a href={%url 'register_view'%} class="btn btn-outline-success mx-3" type="submit">Regestration</a>
-            <a href={%url 'user_login'%} class="btn btn-outline-info" type="submit">Login</a>
+            <a href={%url 'register_view'%} class="btn btn-outline-success mx-3 fw-bold fs-4" type="submit">Regestration</a>
+            <a href={%url 'user_login'%} class="btn btn-outline-info fw-bold fs-4" type="submit">Login</a>
         {%endif%}
 
 
